--- a/FrotiX.Site/Properties/launchSettings.json
+++ b/FrotiX.Site/Properties/launchSettings.json
@@ -3,10 +3,11 @@
     "FrotiX.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:5000"
     },
     "IIS Express": {
       "commandName": "IISExpress",
