--- a/FrotiX.Site/Properties/launchSettings.json
+++ b/FrotiX.Site/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "FrotiX.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
