feat: ListaCacheService + cache unificado Motoristas/Veículos
- Cria ListaCacheService com padrão cache-aside (cache + fallback DB)
- Atualiza CacheKeys com 4 chaves: lista:motoristas, lista:veiculos, lista:veiculos:manutencao, lista:veiculos:reserva
- Adiciona MotoristaDataComFoto DTO (motoristas sempre com foto Base64)
- Atualiza CacheWarmupService: refresh 5min, TTL 10min, 4 tipos de cache
- Migra Pages/Manutencao/Upsert para usar novos tipos de cache
- Registra ListaCacheService no Startup.cs
- Atualiza appsettings com RefreshIntervalMinutes=5, CacheTtlMinutes=10

--- a/FrotiX.Site/Properties/launchSettings.json
+++ b/FrotiX.Site/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "FrotiX.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:5000",
+      "launchUrl": "",
+      "dotnetRunMessages": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
