--- a/FrotiX.Site/appsettings.json
+++ b/FrotiX.Site/appsettings.json
@@ -10,6 +10,12 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
+    "CacheWarmup": {
+        "Enabled": true,
+        "WarmupTimeoutSeconds": 15,
+        "RefreshIntervalMinutes": 5,
+        "CacheTtlMinutes": 10
+    },
     "SmartSettings": {
         "Version": "4.3.1",
         "App": "FrotiX",
