--- a/FrotiX.Site/appsettings.Development.json
+++ b/FrotiX.Site/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source='localhost';Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True",
-        "FrotiX": "Data Source='localhost';Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True"
+        "DefaultConnection": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True",
+        "FrotiX": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True"
     },
     "Logging": {
         "LogLevel": {
