fix(viagens): Adiciona Arla e Cabo Entregues e remove duplicações em Devolvidos
- Adiciona campos ArlaEntregue e CaboEntregue na seção Documentos e Itens Entregues
- Remove duplicação de Arla Devolvido e Cabo Devolvido na seção Documentos e Itens Devolvidos
- Agora ambas seções têm 6 itens cada (Documento, Cartão, Cinta, Tablet, Arla, Cabo)

--- a/FrotiX.Site/appsettings.Development.json
+++ b/FrotiX.Site/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True",
-        "FrotiX": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True"
+        "DefaultConnection": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True;Connect Timeout=5",
+        "FrotiX": "Data Source=localhost;Initial Catalog=Frotix;Trusted_Connection=True;TrustServerCertificate=True;Connect Timeout=5"
     },
     "Logging": {
         "LogLevel": {
