--- a/FrotiX.Site/NuGet.config
+++ b/FrotiX.Site/NuGet.config
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
- <packageSources>
+  <packageSources>
     <clear />
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="Stimulsoft Reports 2023.1.1" value="C:\FrotiX\Stimulsoft Reports 2023.1.1" />
     <add key="TeleriK Reporting 18.1.24.514" value="C:\FrotiX\Telerik.Reporting.Nupkg.18.1.24.514" />
     <add key="Telerik 2023 R1 SP2" value="C:\FrotiX\Telerik.Nupkg.2023R1SP2" />
-    <add key="Telerik 2025" value="C:\FrotiX\Telerik Collection for .NET 2025 Q2" allowInsecureConnections="True" />
- </packageSources>
- <fallbackPackageFolders>
+    <add key="Telerik 2025" value="C:\FrotiX\Telerik Collection for .NET 2025 Q2" />
+  </packageSources>
+  <fallbackPackageFolders>
     <clear />
- </fallbackPackageFolders>
+  </fallbackPackageFolders>
 </configuration>
